--- a/mods.html
+++ b/mods.html
@@ -16,3 +16,9 @@ layout: default
     </article>
   {% endfor %}
 </div>
+
+<ul class="photo-gallery">
+  {% for image in page.images %}
+    <li><img src="{{ image.image_path }}" alt="{{ image.title}}"/></li>
+  {% endfor %}
+</ul>
