--- a/index.html
+++ b/index.html
@@ -16,3 +16,5 @@ layout: default
     </article>
   {% endfor %}
 </div>
+
+<iframe src="https://discordapp.com/widget?id=221026775587618831&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
